Fix bug where search input wouldn't shrink to fit on small screens

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,8 @@ $sidebar-title-height: 60px;
 
 body {
 	@include typography-body-long();
+	-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 	padding: 0;
 	margin: 0;
 }
